# Photoshare-Project

./: .coverage  .env  Dockerfile  LICENSE  Pull requests.txt  README.md  TRANSFORM.md  pyproject.toml  pytest.ini  requirements.txt  test.db  text.md
alembic/: env.py
app/: cache.py  main.py  schemas.py
app/conf/: config.py  messages.py
app/repository/: hashtags.py  posts.py  users.py
app/routers/: auth.py  comments.py  hashtags.py  posts.py  ratings.py  transform_post.py  users.py
app/routes/: auth.py  posts.py
app/services/: email.py
docs/source/: app_database.rst  app_main.rst  app_schemas.rst  app_services.rst  conf.py  generate_sphinx_rst.py  index.rst  modules.rst
docs/source/app/: cache.rst  index.rst
docs/source/app/conf/: messages.rst
docs/source/app/database/: connect_db.rst  index.rst  models.rst
docs/source/app/repository/: comments.rst  index.rst
tests/: conftest.py  test_auth.py  test_auth_routers.py  test_auth_services.py  test_comments.py  test_comments_routers.py  test_email_service.py  test_hashtags.py  test_moks.py  test_posts.py  test_posts_extended.py  test_posts_routers.py  test_rating_repository.py  test_rating_routers.py  test_redis_cache.py  test_users.py  test_users_extended.py  test_users_repository.py  test_users_routers.py
tests/auth/: test_route_auth.py
tests/comments/: test_route_comments.py
tests/hashtags/: test_route_hashtags.py
tests/posts/: test_route_posts.py
tests/rating/: test_route_ratings.py
tests/transformations/: test_route_transform_post.py
tests/users/: test_route_users.py
(+4 files in other folders)
