[tool.poetry]
name = "photoshare-project"
version = "0.1.0"
description = "FastAPI project with PostgreSQL, JWT auth, Cloudinary, Redis, Celery, QR codes"
authors = ["Natalia Bodnarcuk <youremail@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
alembic = "^1.10.2"
cloudinary = "^1.32.0"
django = "^4.2.10"
faker = "^18.4.0"
fastapi = "^0.111.1"
fastapi-limiter = "^0.1.5"
fastapi-mail = "^1.5.8"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pillow = "^12.0.0"
psycopg2-binary = "^2.9.5"
pyqrcode = "^1.2.1"
python = "^3.11"
python-dotenv = "^1.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.7"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
qrcode = "^7.4.2"
redis = "^4.2.0"
sqlalchemy = "^2.0.21"
sqlalchemy-utils = "^0.40.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

